added some analytics

--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
-<link rel="stylesheet" type="text/css" href="stylesheets/web.css"">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=visualization"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script src="js/web.js"></script>
+  <link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/web.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=visualization"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/web.js"></script>
 </head>
 <body>
-  <header id ="nav">StackDaddy's World View</header>
+  <header id ="nav">
+    <h3>StackDaddy's World View</h3>
+    <p id="tweetCount">Tweets: </p>
+    <p id="trending">10 Most Common: </p>
+  </header>
+
+
+
+
   <div id="map"></div>
-
-
-
-
-
 
 
 
