--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 </head>
 <body>
   <header id ="nav">
-    <h3>StackDaddy's World View</h3>
-    <p id="tweetCount">Tweets: </p>
-    <p id="trending">10 Most Common: </p>
+    <h3>The world as it really is...</h3>
   </header>
+  <div id="sidebar">
+    <p id="tweetCount">Tweets: </p>
+    <ul id="trending">
+
+    </ul>
+
+  </div>
 
 
 
